# auralis-vfs

./: CITATIONS.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
auralis/: ecapa.py  scorer.py  validators.py
data/: low_percentile.npz  reference_embeddings_192-d.npy
examples/: basic_usage.ipynb
src/auralis/: __init__.py  config.py  ecapa.py  processing.py  scorer.py  validators.py
src/auralis/data/: centroid_healthy.npy  fatigue_axis.npy  high_percentile.npz
tests/: test_scoring.py
